# psi4

./: .clang-format  .codecov.yml  .cproject  .flake8  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .lgtm  .lgtm.yml  .pre-commit-config.yaml  .travis.yml  CITATION  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  CTestConfig.cmake  CTestCustom.cmake.in  INSTALL  INSTALL.rst  INSTALL_CMAKE  LICENSE  Makefile  Makefile.in  PULL_REQUEST_TEMPLATE.md  README  README.md  README.rst  RELEASE_NOTES  RELEASE_NOTES.REMOVED.git-id  THIRD-PARTY-LICENSES  TODO  _conda_vers.py  aclocal.m4  aclocal.m4.REMOVED.git-id  appveyor.yml  azure-pipelines.yml  boostbegone-todo  casscf_todo  (+31 more)
PsiAPI/: Atom.h  BasisSet.h  CMakeLists.txt  Doxyfile  Doxyfile.REMOVED.git-id  Fragment.h  GaussianBasis.h  Labels.h  Molecule.h  Options.h  Properties.h  PsiAPI.dox  PsiAPIBase.h  PsiMethod.h  Reference.h
PsiAPI/Srcs/: Atom.cc  BasisSet.cc  Molecule.cc
PsiAPI/Utils/: Exception.cc  Exception.h  NestedIterator.h  PsiMap.h  PsiSet.h
cmake/: CMakeLists.txt  CheckCompilerVersion.cmake  CheckFortranCompilerFlag.cmake  ConfigAmbit.cmake  ConfigBoost.cmake  ConfigChemps2.cmake  ConfigDocumentation.cmake  ConfigExplicitLibs.cmake  ConfigExternal.cmake  ConfigInfo.cmake  ConfigOMP.cmake  ConfigPCMSolver.cmake  ConfigPlugins.cmake  ConfigPython.cmake  ConfigSafeGuards.cmake  ConfigTesting.cmake  ConfigVersion.cmake  FindAmbit.cmake  FindCHEMPS2.cmake  FindDL.cmake  FindGSL.cmake  FindHDF5.cmake  FindLibX.cmake  FindM.cmake  FindMath.cmake  FindNumPy.cmake  FindPCMSolver.cmake  FindPYBIND11.cmake  FindPython.cmake  FindPythonLibsNew.cmake  FindPythonModule.cmake  FindRT.cmake  FindSphinx.cmake  FindUtil.cmake  Findlibxc.cmake  Findpybind11.cmake  FortranCInterface.cmake  FortranEnabler.cmake  GenericMacros.cmake  GetValue.cmake  (+23 more)
cmake/compilers/: AddCompilerFlag.cmake  CFlags.cmake  CXXFlags.cmake  CXXFlags.cmake.bak  CheckCCompilerFlag.cmake  CheckCSourceCompiles.cmake  CheckCXX11Features.cmake  CheckCXXCompilerFlag.cmake  CheckCXXSourceCompiles.cmake  CheckFortranCompilerFlag.cmake  CheckFortranSourceCompiles.cmake  ConfigCompilerFlags.cmake  FindBrokenIntrinsics.cmake  FortranFlags.cmake  OptimizeForArchitecture.cmake  PerTargetCompilerFlags.cmake  SaveCompilerFlags.cmake  TestRestrict.cmake
cmake/math/: ConfigMath.cmake  MathLibs.cmake  MathLibsFunctions.cmake  VERSION
cmake/testing/: ConfigFramework.cmake  TestingMacros.cmake
doc/doxygen/: CMakeLists.txt  CodeStats.dox  Makefile  Makefile.in  doxygen.cfg  doxygen.cfg.in
doc/sphinxman/: CMakeLists.txt  Makefile  Makefile.in  apply_relpath.py.in  document_bases.pl  document_capabilities.py  document_cfour.py  document_databases.py  document_driver.py  document_efpfrag.py  document_efpfragments.py  document_fraglib.py  document_options_and_tests_and_physconst.pl  document_options_c.pl  document_options_tests_physconst_psivariables.pl  document_physconst.pl  document_plugins.py  document_psifiles.py  document_psivariables.pl  document_python_modules.py  document_stubs.py  document_tests.pl  extract_changeset.py  relpath.py  separate_userprogman.py
interfaces/: CMakeLists.txt
interfaces/chemps2/: CMakeLists.txt
interfaces/gpu_dfcc/: CMakeLists.txt
interfaces/libefp/: CMakeLists.txt
lib/: CMakeLists.txt  Makefile  Makefile.in  basis.txt  defaults.yml  libarmci.la  libga.la  pbasis.dat.REMOVED.git-id  psi.dat.REMOVED.git-id
lib/basis/: 3-21g.gbs  6-311g.gbs  6-311g_2d_.gbs  6-311g_2d_2p_.gbs  6-311g_2df_2p_.gbs  6-311g_3df_.gbs  6-311g_3df_2p_.gbs  6-311g_3df_2pd_.gbs  6-311g_3df_3pd_.gbs  6-311g_3df_p_.gbs  6-311g_d_.gbs  6-311gs.gbs  6-311pg_2d_p_.gbs  6-311pg_2df_.gbs  6-311pg_2df_p_.gbs  6-311pg_3df_2p_.gbs  6-311pg_3df_2pd_.gbs  6-311pg_3df_3pd_.gbs  6-311pgss.gbs  6-311ppg_2d_2p_.gbs  6-311ppg_2df_.gbs  6-311ppg_3df_.gbs  6-311ppg_3df_2p_.gbs  6-311ppg_3df_2pd_.gbs  6-311ppg_3df_p_.gbs  6-311ppgs.gbs  6-311ppgss.gbs  6-31g_d_p_.gbs  6-31pg_d_.gbs  6-31ppg_d_.gbs  6-31ppg_d_p_.gbs  NOTES  NOTES.REMOVED.git-id  ano0.gbs  apr-cc-pcv6z.gbs  apr-cc-pcv_6pd_z.gbs  apr-cc-pcv_6pd_z.gbs.REMOVED.git-id  apr-cc-pcv_qpd_z.gbs  apr-cc-pcvqz.gbs  apr-cc-pv5z-ri.gbs  (+305 more)
lib/databases/: A24.py  A24alt.py  ACENES.py  ACENES.py.REMOVED.git-id  BAKERJCC93.py  BAKERJCC93.py.REMOVED.git-id  BAKERJCC96.py  BASIC.py  BBI.py  BBI.py.REMOVED.git-id  BENCH12.py  BENCH12.py.REMOVED.git-id  BFS4xyz2db.py  CFLOW.py  CFLOW.py.REMOVED.git-id  CORE.py  G2.py  G2.py.REMOVED.git-id  HBC6.py  HBC6.py.REMOVED.git-id  HSG.py  HSG.py.REMOVED.git-id  HTBH.py  HTR40.py  HTR40.py.REMOVED.git-id  JSCH.py  JSCH.py.REMOVED.git-id  NBC10.py  NBC10.py.REMOVED.git-id  NCB31.py  NCB31.py.REMOVED.git-id  NHTBH.py  RGC10.py  RGC10.py.REMOVED.git-id  RSE42.py  RSE42.py.REMOVED.git-id  S22.py  S22.py.REMOVED.git-id  S22by5.py  S22by5.py.REMOVED.git-id  (+7 more)
lib/efpfrag/: 2aminopyridine.efp  2aminopyridine.efp.REMOVED.git-id  acetamide-hb.efp  acetamide-hb.efp.REMOVED.git-id  ammonia.efp  (+35 more)
libefp/: Doxyfile  Doxyfile.REMOVED.git-id  LICENSE  Makefile.am  Makefile.in  Makefile.in.REMOVED.git-id  PSI4-README  README-MAC  README.md  UPDATING  aclocal.m4  autogen.sh  config.h.in  configure  configure.REMOVED.git-id  configure.ac  libefp-0.1.tar.gz-mac  libefp-0.1.tar.gz-mac.REMOVED.git-id  libefp-0.1.tar.gz.REMOVED.git-id  libefp-0.9.1.tar.gz.REMOVED.git-id
plugins/: CMakeLists.txt  Makefile.in
psi4/: CMakeLists.txt  __init__.py  broker.py  config.py  config.py.in  extras.py  header.py  import_core.py  import_core.py.in  metadata.py  psi4-config.in  psi4.bat  psi4.cc  psi4Config.cmake.in  psi4PluginCache.cmake.in  psi4core_import.py  psi4trick.py  run_psi4.py  run_psi4.py.in  thinmints__init__.py  version.py  versioner.py
tests/: @pcmsolver.19028.4bcee6b8  CMakeLists.txt  MakeRules.in  MakeVars  MakeVars.in  Makefile  Makefile.in  PEDRA.OUT__19028  cavity.off__19028  cc_index  make_cmake_files.py  output_parser.py  psitest.pl  psitest.pl.REMOVED.git-id  pytest_output.default.19028.DIIS.h5  pytest_output.default.19028.unitary.h5  reap.py  runtest.pl  runtest.pl.in  runtest.py  tester.py
(+21242 files in other folders)
